--- a/site/index.html
+++ b/site/index.html
@@ -4,6 +4,6 @@
 	<title>Welcome to epoxi</title>
 </head>
 <body>
-<h1>Welcome to our site</h1>
+<h1>Welcome to our site. Epoxi</h1>
 </body>
 </html>
