--- a/site/index.html
+++ b/site/index.html
@@ -3,6 +3,14 @@
 <head>
 	<meta charset="utf-8">
 	<title>Welcome to epoxi</title>
+	<meta name= "viewport" content="width-device-width, initial-scale1.0">
+	<img src="logo.jpg">
+	<nav><ul>
+	<li class="active"><a href="template.php">Pocetna</a></li>
+	<li><a href='ponuda.php'>Ponuda</a></li>
+	<li><a href="Galerija.php">Galerija</a></li>
+	<li><a href='index.php'>Log in</a></li>
+	</ul></nav>
 </head>
 <body>
 <h1>Welcome to our site. Epoxi</h1>
