--- a/site/index.html
+++ b/site/index.html
@@ -7,7 +7,7 @@
 	<img src="logo.jpg">
 	<nav><ul>
 	<li class="active"><a href="index.html">Home</a></li>
-	<li><a href='ponuda.html'>Offers</a></li>
+	<li><a href='offers.html'>Offers</a></li>
 	<li><a href="Galerija.html">Galery</a></li>
 	<li><a href='about.html'>About us</a></li>
 	</ul></nav>
