--- a/site/index.html
+++ b/site/index.html
@@ -6,7 +6,7 @@
 	<meta name= "viewport" content="width-device-width, initial-scale1.0">
 	<img src="logo.jpg">
 	<nav><ul>
-	<li class="active"><a href="index.html">Home</a></li>
+	<li><a href="index.html">Home</a></li>
 	<li><a href='offers.html'>Offers</a></li>
 	<li><a href="Galerija.html">Galery</a></li>
 	<li><a href='about.html'>About us</a></li>
