--- a/site/offers.html
+++ b/site/offers.html
@@ -6,7 +6,7 @@
 	<img src="logo.jpg">
 	<nav><ul>
 	<li ><a href="index.html">Home</a></li>
-	<li class="active"><a href='offers.html'>Offers</a></li>
+	<li><a href='offers.html'>Offers</a></li>
 	<li><a href="Galerija.html">Galery</a></li>
 	<li><a href='about.html'>About us</a></li>
 	</ul></nav>
