--- a/site/offers.html
+++ b/site/offers.html
@@ -25,5 +25,8 @@
  		<li>stvar</li>
  		Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever
  	</ol>
+ 	<footer class="mainfooter">
+		<p>Copyright &copy; jsdpartners 2019 <a href="#" title="mail">jsd@mail.com</a></p>
+	</footer>
 </body>
 </html>
